Finish caculation service API
