# Receiver/openapi.yaml
@@ -28,40 +28,6 @@ paths:
             schema:
               $ref: '#/components/schemas/TemperatureReading'
         description: Temperature to add
-    get:
-      tags:
-        - temperature
-      summary: get a mining rig temperature
-      operationId: app.get_temperature
-      description: get the current temperature added after a timestamp
-      parameters:
-        - name: timestamp
-          in: query
-          description: Limits the number of items on a page
-          schema:
-            type: string
-            format: date-time
-            example: 2016-08-29T09:12:33.001Z
-      responses:
-        '200':
-          description: Successfully returned a list of temperature events
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                $ref: '#/components/schemas/TemperatureReading'
-        '400':
-          description: Invalid request
-          content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                message:
-                  type: string
-
-      
   /status/fanspeed:
     post:
       tags:
@@ -80,38 +46,6 @@ paths:
             schema:
               $ref: '#/components/schemas/FanSpeedReading'
         description: Fan speed to add
-  get:
-    tags:
-      - fanspeed
-    summary: get a mining rig fanspeed
-    operationId: app.get_fan_speed
-    description: get the current fan speed added after a timestamp
-    parameters:
-      - name: timestamp
-        in: query
-        description: Limits the number of items on a page
-        schema:
-          type: string
-          format: date-time
-          example: 2016-08-29T09:12:33.001Z
-    responses:
-      '200':
-        description: Successfully returned a list of fan speed
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-              $ref: '#/components/schemas/FanSpeedReading'
-      '400':
-        description: Invalid request
-        content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              message:
-                type: string
 components:
   schemas:
     TemperatureReading:
@@ -149,7 +83,8 @@ components:
           example: d290f1ee-6c54-4b01-90e6-d701748f0851
         ming_card_id:
           type: string
-          example: rig1-01
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
         fan_speed:
           $ref: '#/components/schemas/FanSpeed'
         timestamp:
@@ -157,16 +92,12 @@ components:
           format: date-time
           example: '2016-08-29T09:12:33.001Z'
       type: object
-      
+
     Temperature:
       required:
-        - ming_card_model
         - core_temperature
         - shell_temperature
       properties:
-        ming_card_model:
-          type: string
-          example: RTX2080
         core_temperature:
           type: integer
           example: 70
@@ -177,16 +108,12 @@ components:
 
     FanSpeed:
       required:
-        - ming_card_model
-        - fan_position
+        - fan_size
         - fan_speed
       properties:
-        ming_card_model:
-          type: string
-          example: RTX2080
-        fan_position:
-          type: string
-          example: middle
+        fan_size:
+          type: integer
+          example: 7
         fan_speed:
           type: integer
           example: 2000
